# disease-detector

./: .gitignore  README.md  SECURITY.md  data.py  display_symptoms.json  symptoms.json
.devcontainer/: devcontainer.json
.github/workflows/: format.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  fithub.ipynb  gunicorn.conf.py  pyproject.toml  run.sh  start.py
backend/.ipynb_checkpoints/: fithub-checkpoint.ipynb
backend/cache/: disease_descriptions.json
backend/src/: app.py
backend/src/model/: model.joblib
backend/src/utils/: data.py  utils.py
docs/: CNAME  README.md  api-documentation.md  backend-documentation.md  deployment-guide.md  development-guide.md  frontend-documentation.md  ml-documentation.md  user-guide.md
frontend/: .env  pyproject.toml  requirements.txt
frontend/src/: app.py  styles.css
frontend/src/.streamlit/: config.toml
frontend/src/components/: __init__.py  about.py  displayResult.py  footer.py  header.py  info.py  result.py  selection.py
frontend/src/utils/: constants.py  data.py  utils.py
ml/: data.py  fithub.ipynb
nginx/: disease-detector
