[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=5.0.0",
    "google>=3.0.0",
    "google-genai>=1.23.0",
    "gunicorn>=23.0.0",
    "joblib>=1.5.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
]
